--- a/src/Services/Cataloging/Query/Infrastructure.Projections/Infrastructure.Projections.csproj
+++ b/src/Services/Cataloging/Query/Infrastructure.Projections/Infrastructure.Projections.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <ItemGroup>
-        <PackageReference Include="MongoDB.Driver" />
+        <PackageReference Include="Elastic.Clients.Elasticsearch"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" />
         <PackageReference Include="Serilog" />
     </ItemGroup>
     <ItemGroup>
